Wed Jul  1 15:25:23 MET DST 1998 hannes:
* fixed bug with quotient: M:module(0) returns (1), not ([1])

Fri Jun 19 10:01:59 MET DST 1998 hannes
* hannes: changed back: quot is now from standard.lib,
                        quotient the C-version
			(iparith.cc LIB/standard.lib)

Thu Jun 18 19:27:27 MET DST 1998 hannes
        * error handling (grammar.y iparith.cc iplib.cc)
          (leaving of levels, local vars, messages,..)
          The reason:
               proc p { intvec w; w[0]; }
               proc p2 {int i;p();"huhu";}
               p2(); int i; listvar();

1998-06-13  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

        * feread.cc: explicit declaration of stuff we need from readline.h

1998-06-12  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

        * polys.cc: pComp for simple orderings based on only three
        routines (no variation for # of variables)

        * spolys0.cc (spGSpolyLoop): globally replaced by spSpolyLoop_General

Fri Jun 12 12:11:06 MET DST 1998 hannes
        * minor optimizations in polys.cc, kutil.* kstd1.cc:
          pass pointers, not structures to posIn[LT],
          do not check for NULL in pDeg (as pFDeg does not check)

Wed Jun  3 16:20:22 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

        * Makefile.in (DOCS): target removed
          (DISTFILES): reference to `$(DOC)' removed
          (distclean): reference to `$(docdir)' removed

Wed Jun 03 16:46:06 1998    <pohl@FUECHSE>

        * claptmpl.cc: instantiation for operator == (CFFactor, CFFactor)
          added

Tue Jun  2 17:28:48 MET DST 1998 hannes
        * introduced /* */ comments
        * some code cleanups
Fri May 29 17:00:27 MET DST 1998 hannes
        * change res to nres (cmd), resu to res(standard.lib)
          including changes to libs, docs (partially)
Wed May 27 19:13:10 MET DST 1998 hannes
        * removed #define HAVE_GMP and non-gmp-parts
Wed May 20 15:03:28 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>
